--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-TOKEN= ""
+TOKEN= "MTA4Njk1NzI5MzcyOTQ4ODkwOA.GAYQfs.Q9VD-EJKQqufgLlU2yNqkZlCMRP30ei0FNAwrA"
 MONGO_DB= ""
-CLIENT_ID= ""
+CLIENT_ID= "1086957293729488908"
